# commit-bot

./: .gitignore  README.md  compose.yaml  pull_ollama_model.sh  pyproject.toml  requirements.txt
ollama_compose/: compose.yaml
src/commit_bot/: main.py  utils.py
src/commit_bot/conf/: README.md
src/commit_pilot/: ai_models.py  exec_vllm.sh  huggingface_chat_model.py  main.py  prompts.py  utils.py
src/commit_pilot/conf/: Readme.md  job.conf  model.conf  model_bk.conf
tests/: test_main.py
tests/commit_bot/integration/: test_ai_models_functions.py
tests/commit_pilot/: .test_main.py.swp  test_ai_models.py  test_main.py
tests/commit_pilot/integration/: test_ai_models_functions.py
tests/integration/: test_ai_models_functions.py  test_behaviors_on_run.py
tests/unit/commit_bot/: test_main.py
