[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commit_pilot"
version = "0.1.0"
description = "A brief description of your project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyhocon==0.3.61",
    "litellm==1.76.3",
    "vllm==0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "jupyterlab",
    "jupyterlab-vim",
    "ipython",
    "python-lsp-server[all]",
    "pylint",
    "flake8",
    "flake8-quotes",
    "pep8-naming",
    "isort",
    "openpyxl",
    "visidata",
    "csvkit",
    "black",
    "tabulate[widechars]",
]

[project.scripts]
commit-pilot = "commit_pilot.main:run"

[tool.setuptools.package-data]
"commit_pilot" = ["conf/*.conf"]

[tool.setuptools.packages.find]
where = ["src"]
